cabal-version:      3.4
name:               wlp
version:            0.1.0.0
synopsis:           todo
description:        todo todo
homepage:           https://www.cs.uu.nl/docs/vakken/pv
license:            MIT
author:             Anand Apoorva
                    Sem van Nieuwenhuizen
                    Wilco Verhoef
maintainer:         a.apoorvaanand@students.uu.nl
                    r.s.vannieuwenhuizen@students.uu.nl
                    a.w.verhoef@uu.nl

category:           Testing
build-type:         Simple

source-repository head
    location:       https://git.science.uu.nl/pv/wlp.git
    type:           git

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    other-modules:    Paths, Transformers
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                    , GCLparser ^>=0.2.1
                    , z3 ^>= 408.2
                    , mtl ^>= 2.3.1
                    , containers ^>=0.7
    hs-source-dirs:   src
    default-language: GHC2021

executable wlp
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        wlp

    hs-source-dirs:   app
    default-language: GHC2021

test-suite wlp-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        wlp
