cabal-version:      3.4
name:               wlp
version:            0.1.0.0
synopsis:           todo
description:        todo todo
homepage:           https://www.cs.uu.nl/docs/vakken/pv
license:            MIT
author:             Apoorva Anand
                    Sem van Nieuwenhuizen
                    Wilco Verhoef
maintainer:         a.apoorvaanand@students.uu.nl
                    r.s.vannieuwenhuizen@students.uu.nl
                    a.w.verhoef@uu.nl

category:           Testing
build-type:         Simple

source-repository head
    location:       https://git.science.uu.nl/pv/wlp.git
    type:           git

common warnings
    ghc-options: -Wall

executable wlp
    import:           warnings
    other-modules:
        Feasibility,
        Heuristics,
        Options,
        Paths,
        Simplify,
        Transformers,
        Verification,
        WLP,
        Utils,
        MyVerification
        VerificationResult
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        containers ^>=0.6.7,
        GCLparser ^>=0.2.1,
        mtl ^>= 2.3.1,
        optparse-applicative ^>= 0.17,
        recursion-schemes ^>= 5.2.2.2,
        z3 ^>= 408.2,
        ansi-terminal ^>= 1.0
    hs-source-dirs:   src
    default-language: GHC2021
    main-is:          Main.hs
